--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,18 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.title {
+  color: #db7093;
+}
+
+.search-bar {
+  width: 750px;
+  height: 32px;
+  border: 1px solid #d3d6db;
+  border-radius: 4px;
+  font-size: 16px;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  padding: 3px 20px;
+  line-height: 24px;
+
+}
