--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
 }
 
 .search-bar {
-  width: 750px;
+  width: 300px;
   height: 32px;
   border: 1px solid #d3d6db;
   border-radius: 4px;
@@ -16,5 +16,21 @@ body {
   box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
   padding: 3px 20px;
   line-height: 24px;
+
+}
+
+.side {
+  height: 100%;
+  width: 400px;
+  position: fixed;
+  top:0;
+  left:0;
+  background-color: #d3d6db;
+  padding-top: 200px;
+}
+
+.main-container {
+  padding-left: 500px;
+  padding-right: 50px;
 
 }
