--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,12 @@ body {
   position: fixed;
   top:0;
   left:0;
-  background-color: #d3d6db;
+  background-color: #eaeaeb;
   padding-top: 200px;
+  /* border-right: solid #bebebf 1px; */
 }
 
 .main-container {
   padding-left: 500px;
   padding-right: 50px;
-
 }
