--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,67 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
-.title {
-  color: #db7093;
-}
-
-.search-bar {
-  width: 300px;
-  height: 32px;
-  border: 1px solid #d3d6db;
-  border-radius: 4px;
-  font-size: 16px;
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  padding: 3px 20px;
-  line-height: 24px;
+.app {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 
 }
 
 .side {
   height: 100%;
-  width: 400px;
-  position: fixed;
-  top:0;
-  left:0;
-  background-color: #eaeaeb;
+  width: 30%;
+  /* top:0;
+  left:0; */
+  /* margin: 10px; */
+  background-color: rgb(238, 238, 238);
   padding-top: 200px;
+  text-align: center;
   /* border-right: solid #bebebf 1px; */
 }
 
 .main-container {
-  padding-left: 500px;
-  padding-right: 50px;
+  height: 100%;
+  width: 70%;
+  float: right;
 }
+
+
+.title {
+  color: #365899;
+  font-weight: 600;
+}
+
+.search-bar {
+  width: 300px;
+  height: 50px;
+  border: none;
+  border-bottom-style: solid 1px;
+  /* border-radius: 4px; */
+  font-size: 16px;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  padding: 3px 20px;
+  line-height: 24px;
+  font-weight: 300;
+
+}
+
+
 
 ul {
   list-style-type: none;
   text-decoration: none;
   text-align: center;
   text-decoration-line: none;
+}
+
+.nav-bar {
+  font-weight: 400;
+}
+
+.tag-line {
+  font-weight: 400;
 }
