--- a/src/index.css
+++ b/src/index.css
@@ -3,30 +3,22 @@ body {
   padding: 0;
   font-family: 'Open Sans', sans-serif;
 }
-.app {
+.App {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  flex-flow: row wrap;
+  justify-content: center;
+}
 
+.column {
+  flex: 1;
 }
 
 .side {
-  height: 100%;
-  width: 30%;
-  /* top:0;
-  left:0; */
-  /* margin: 10px; */
-  background-color: rgb(238, 238, 238);
+  background-color: #f0faf8;
   padding-top: 200px;
-  text-align: center;
-  /* border-right: solid #bebebf 1px; */
 }
-
 .main-container {
-  height: 100%;
-  width: 70%;
-  float: right;
+  flex-grow: 2.5;
 }
 
 
@@ -36,19 +28,28 @@ body {
 }
 
 .search-bar {
-  width: 300px;
-  height: 50px;
+  width: 60%;
+  height: 70px;
   border: none;
-  border-bottom-style: solid 1px;
-  /* border-radius: 4px; */
+  border-bottom: solid 1px #365899;
   font-size: 16px;
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  padding: 3px 20px;
+  padding: 3px 30px;
   line-height: 24px;
   font-weight: 300;
-
+  background-color:#f0faf8 ;
 }
 
+::placeholder {
+  color: #4a68a7;
+}
+
+:focus {
+  outline: none;
+}
+
+.label {
+  color: #4a68a7;
+}
 
 
 ul {
