--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,11 @@ body {
   background-color:#f0faf8 ;
 }
 
+.match-select {
+  border-radius:0px !important;
+  appearance: none;
+}
+
 .search-field{
   width: 100%;
   padding: 0px 30px 0px 30px;
