--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,10 +1,11 @@
-.home {
+/* .home {
     display: flex;
     flex-flow: row wrap;
     align-content: center;
-}
+} */
 
 img {
     max-width: 100%;
     height: auto;
+    display: inline-flex;
 }
