--- a/src/components/BarkList/barklist.css
+++ b/src/components/BarkList/barklist.css
@@ -2,5 +2,6 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    width: 60vw;
 }
