--- a/src/index.css
+++ b/src/index.css
@@ -106,14 +106,14 @@ ul {
   margin-top: 50px;
 }
 
-.bark-info {
+/* .bark-info {
   width: 70%;
   text-align: center;
   margin: auto;
   color: #4b4f56;
   font-weight: 300;
   line-height: 34px;
-}
+} */
 
 .title {
   font-weight: 400;
