random list card display

--- a/src/components/RandomList/randomlist.css
+++ b/src/components/RandomList/randomlist.css
@@ -1,5 +1,8 @@
 .random-list-card {
+    display: flex;
+    justify-content: center;
     width: 75rem;
+    margin-left: 2rem;
 }
 
 .random-list-card-img {
