--- a/src/components/RandomList/randomlist.css
+++ b/src/components/RandomList/randomlist.css
@@ -1,7 +1,7 @@
 .random-list-card {
     display: flex;
     justify-content: center;
-    width: 75rem;
+    width: 70vw;
     margin-left: 2rem;
 }
 
