--- a/src/components/BarkList/barklist.css
+++ b/src/components/BarkList/barklist.css
@@ -14,7 +14,7 @@
 }
 
 .card-img-top {
-    width: 18rem;
+    /* width: 18rem; */
     height: 18rem;
     object-fit: cover;
     border-radius: 0 !important;
