--- a/src/index.css
+++ b/src/index.css
@@ -1,138 +1,7 @@
 body {
-  margin: 0;
-  padding-top: 100px;
-  padding-bottom: 200px;
+  margin: 0 auto;
+  padding: 0;
   font-family: 'Open Sans', sans-serif;
-}
-.App {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  font-size: 62.5%; 
 }
 
-.tag-line {
-  text-align: center;
-}
-
-.title {
-  text-align: center;
-}
-
-.side {
-  background-color: #f0faf8;
-  padding-top: 200px;
-  height: auto;
-  display: flex;
-  width: 480px;
-  flex-direction: column;
-  order: 1;
-}
-@media (max-width: 600px) {
-  .side { width: auto;}
-  .App { flex-direction: column;}
-}
-
-.main-container {
-  flex-grow: 2.5;
-  flex-direction: column;
-  order: 2;
-}
-
-.search-bar {
-  width: 70%;
-  height: 70px;
-  border: none;
-  border-bottom: solid 1px #365899;
-  font-size: 16px;
-  font-weight: 300;
-  background-color:#f0faf8 ;
-  cursor: pointer;
-}
-
-.match-select {
-  border-radius:0px !important;
-  appearance: none;
-  color: #4a68a7;
-  padding-left: 20px;
-  cursor: pointer;
-  background-color: #f0faf8;
-}
-
-
-.search-field{
-  width: 100%;
-  padding: 0px 30px 0px 30px;
-}
-
-::placeholder {
-  color: #4a68a7;
-  padding-left: 20px;
-}
-
-:focus {
-  outline: none;
-}
-
-.label {
-  color: #4a68a7;
-  width: 30%;
-  height: 70px;
-  line-height: 70px;
-  text-align: right;
-  margin: 0;
-  padding:0px 12px 0px 0px;
-}
-
-ul {
-  list-style-type: none;
-  text-decoration: none;
-  text-align: center;
-  text-decoration-line: none;
-}
-
-.nav-bar {
-  font-weight: 400;
-}
-
-.tag-line {
-  font-weight: 300;
-  color: #777d87;
-  margin: 20px;
-}
-
-.btn {
-  font-weight: 300;
-  background-color: #233762;
-}
-
-.btn-lg {
-  width: 200px;
-  margin-top: 50px;
-}
-
-/* .bark-info {
-  width: 70%;
-  text-align: center;
-  margin: auto;
-  color: #4b4f56;
-  font-weight: 300;
-  line-height: 34px;
-} */
-
-.title {
-  font-weight: 400;
-  color: #233762;
-}
-
-.display-barks {
-  color: #4b4f56;
-  font-weight: 300;
-  line-height: 34px;
-  margin: 25px;
-  padding-bottom: 32px;
-  border-bottom: solid 0.5px #c0c2c4;
-}
-
-.about-img {
-  margin-bottom: 27px;
-}
