--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,20 +1,26 @@
 .nav-bar {
-    display: flex;
-    justify-content: space-between;
     background: #fc565c;
+}
+
+.menu {
+    display: flex;
+    justify-content: center;
     align-items: baseline;
+    max-width: 120em;
+    margin: 0 auto;
+
 }
 
 .nav-bar ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
     list-style: none;
 }
 
 .nav-bar li {
+    font-family: 'Karla', sans-serif;
     padding: 1em 2em;
-    font-size: 1.6em;
+    font-size: 1.8em;
 }
 
 .nav-bar li a {
@@ -25,6 +31,9 @@
 .tag-line {
     display: flex;
     padding: 1em 2em;
-    color: #ffffff;
-    font-size: 1.6em;
+    color:  #fc565c;
+    font-size: 1.8em;
+    background: #ffffff;
+    font-weight: 200;
+    font-family: 'Montserrat', sans-serif;
 }
