--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 body {
   margin: 0 auto;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 62.5%; 
+  height: 100%;
 }
 
+html {
+  height: 100%;
+}
