--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -4,6 +4,12 @@
 }
 
 .home img {
-    width: 70vw;
+    width: 100%;
     margin-top: 8em;
+}
+
+@media screen and ( min-width: 480px) {
+    .home img {
+       width: 70vw;
+    }
 }
