--- a/src/components/Gender/gender.css
+++ b/src/components/Gender/gender.css
@@ -4,6 +4,7 @@
     font-size: 1.8rem;
     font-weight: 200;
     margin-bottom: 0.5em;
+    color: #22355b;
 }
 
 .search-gender-container .gender-label {
@@ -12,4 +13,5 @@
 
 .search-gender-container .gender-input {
     width: 20em;
+    padding-left: 1em;
 }
