--- a/src/components/RandomBark/randombark.css
+++ b/src/components/RandomBark/randombark.css
@@ -4,6 +4,7 @@
     font-size: 1.8rem;
     font-weight: 200;
     margin-bottom: 0.5em;
+    color: #22355b;
 }
 
 .search-random-container .random-label {
@@ -13,4 +14,5 @@
 .search-random-container .random-select {
     width: 20em;
     height: 3em;
+    padding-left: 1em;
 }
