--- a/src/components/SearchLocation/searchlocation.css
+++ b/src/components/SearchLocation/searchlocation.css
@@ -4,6 +4,7 @@
     font-size: 1.8rem;
     font-weight: 200;
     margin-bottom: 0.5em;
+    color: #22355b;
 }
 
 .search-location-container .location-label {
@@ -12,4 +13,5 @@
 
 .search-location-container .location-input {
     width: 20em;
+    padding-left: 1em;
 }
