--- a/src/components/BarkList/barklist.css
+++ b/src/components/BarkList/barklist.css
@@ -1,27 +1,56 @@
-/* .card-img-top {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-@media screen and (min-width: 480px) {
-    .card-img-top {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-    }
-} */
-
 .bark-lists .card {
-    /* display: flex;
-    justify-content: center; */
     width: 100%;
+    margin-bottom: 2em;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
+    background-color: #fd676517;
+    
 }
 
 .bark-lists {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 3em;
 }
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 85vw;
+    margin-bottom: 2em;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 34em;
+    object-fit: cover;
+    margin-bottom: 1em;
+}
+
+.card-title {
+    font-size: 1.8rem;
+    color: #22355b;
+    font-weight: 300;
+    margin-bottom: .3em;
+}
+
+.card-text {
+    font-size: 1.2rem;
+    color: #22355b;
+    font-weight: 100;
+}
+
+.sub-title {
+    /* font-family: 'Karla', sans-serif; */
+    font-size: 1.2rem;
+    color: #22355b;
+    font-weight: 300;
+    padding-right: 0.2em;
+}
+
 
 @media screen and (min-width: 480px) {
     .bark-lists {
@@ -30,17 +59,30 @@
         justify-content: space-between;
         width: 90%;
         margin: 0 auto;
+        margin-top: 8em;
     }
 
     .bark-lists .card {
         display: flex;
-        flex: 0 1 calc(25% - .3em);
+        flex: 0 1 calc(25% - 2.5em);
         flex-direction: column;
+        background-color: #fd676517;
+        align-items: center;
+        margin-bottom: 3em;
+    }
+
+    .card-body {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 20vw;
+        margin-bottom: 2em;
+    }
+
+    .card-img-top {
+        width: 34em;
+        height: 34em;
+        object-fit: cover;
+        margin-bottom: 3em;
     }
 } 
-
-.card-img-top {
-    width: 34em;
-    height: 34em;
-    object-fit: cover;
-}
