--- a/src/components/Gender/gender.css
+++ b/src/components/Gender/gender.css
@@ -14,4 +14,10 @@
 .search-gender-container .gender-input {
     width: 20em;
     padding-left: 1em;
+    border: solid 1px  #fc565c;
+}
+
+::placeholder {
+   font-weight: 100;
+   font-size: 1.2em;
 }
