--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -29,9 +29,10 @@
 
 
 .nav-bar li {
-    font-family: 'Karla', sans-serif;
+    /* font-family: 'Karla', sans-serif; */
     padding: 1em 2em;
     font-size: 1.8em;
+    font-weight: 100;
     /* flex: 1 1 100%; */
 }
 
@@ -44,7 +45,7 @@
     color:  #fc565c;
     font-size: 1.8em;
     background: #ffffff;
-    font-weight: 200;
+    font-weight: 300;
     font-family: 'Montserrat', sans-serif;
     padding: 1em 2em;
     text-align: center;
