--- a/src/components/Gender/gender.css
+++ b/src/components/Gender/gender.css
@@ -1,6 +1,7 @@
 .search-gender-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     font-size: 1.8rem;
     font-weight: 200;
     margin-bottom: 0.5em;
@@ -13,6 +14,7 @@
 
 .search-gender-container .gender-input {
     width: 20em;
+    height: 4em;
     padding-left: 1em;
     border: solid 1px  #fc565c;
 }
