--- a/src/components/BarkDetails/barkdetails.css
+++ b/src/components/BarkDetails/barkdetails.css
@@ -29,7 +29,7 @@
     height: 4em;
     padding: 0.35em 1.2em;
     border: 0.05em solid #fc565c;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     margin-top: 3em;
     margin-bottom: 10em;
     box-sizing: border-box;
@@ -38,7 +38,7 @@
     color:#fc565c;
     text-align: center;
     transition: all 0.2s;
-    font-size: 1.6em;
+    font-size: .8rem;
     cursor: pointer;
     }
 
