--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,7 +1,12 @@
+.navbar-container {
+    display: flex;
+    align-items: flex-start;
+}
 .nav-bar {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    order: 2;
 }
 
 .tag-line {  
@@ -9,18 +14,13 @@
     justify-content: flex-start;
     align-items: center;
     color:  #141414;
-    /* font-size: 1.6em; */
-    /* letter-spacing: 1px;
-    background: #ffffff;
-    font-weight: 500; */
-    /* font-family: 'Montserrat', sans-serif; */
     padding: 2em 5em;
-    /* padding-left: 5em; */
     text-align: center;
     flex-grow: 1;
 }
 
 .tag-line h1 {
+    display: none;
     color:  #052a4e;
     font-size: 1.8em;
     letter-spacing: 1px;
@@ -52,9 +52,36 @@
     color:#052a4e;
 }
 
+.nav-bar-narrow {
+    padding: 4em 6em;
+    flex-grow: 1
+}
+.narrow-nav-menu ul {
+    list-style: none;
+    padding-left: 0;
+}
 
+.narrow-nav-menu li {
+    padding-bottom: .8em;
+    font-size: 1.8em;
+    font-weight: 300;
+}
+
+.narrow-nav-menu li a {
+    text-decoration: none;
+    color:#052a4e;
+}
+
+i {
+    padding-right: 2em;
+    margin-bottom: 1em;
+    color: #2798d2;
+}
 
 @media screen and ( min-width: 480px) {
+    .navbar-container {
+        display: inline;
+    }
     .nav-bar-narrow {
         display: none;
     }
@@ -70,5 +97,9 @@
 
     .tag-line {
         display: flex;
+        justify-content: flex-end;
+    }
+    .tag-line h1 {
+        display: inline;
     }
 }
