--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -2,11 +2,13 @@
     display: flex;
     align-items: flex-start;
 }
+
 .nav-bar {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     order: 2;
+    padding-right: 2em;
 }
 
 .tag-line {  
@@ -20,7 +22,6 @@
 }
 
 .tag-line h1 {
-    display: none;
     color:  #052a4e;
     font-size: 1.8em;
     letter-spacing: 1px;
@@ -62,9 +63,9 @@
 }
 
 .narrow-nav-menu li {
-    padding-bottom: .8em;
-    font-size: 1.8em;
-    font-weight: 300;
+    padding-bottom: 1.8em;
+    font-size: 1.4em;
+    font-weight: 400;
 }
 
 .narrow-nav-menu li a {
@@ -78,7 +79,7 @@ i {
     color: #2798d2;
 }
 
-@media screen and ( min-width: 480px) {
+@media screen and ( min-width: 768px) {
     .navbar-container {
         display: inline;
     }
