--- a/src/components/RandomBark/randombark.css
+++ b/src/components/RandomBark/randombark.css
@@ -32,6 +32,10 @@ select {
     margin-left: 1em;
 }
 
+.random-select a {
+    text-decoration: none;
+}
+
 @media screen and (min-width: 480px) {
     .search-random-container {
         display: flex;
