--- a/src/components/SearchBar/searchbar.css
+++ b/src/components/SearchBar/searchbar.css
@@ -22,11 +22,11 @@
     width: 5em;
 }
 
+
 .search-bar-container .search-field .search-input {
-    width: 20em;
-    height: 4em;
-    padding-left: 1em;
-    border: solid 1px  #fc565c;
+    width: 21em;
+    height: 4.2em; 
+    margin-left: 0em !important;
+    color: #22355b;
+    
 }
-
-
