--- a/src/components/RandomList/randomlist.css
+++ b/src/components/RandomList/randomlist.css
@@ -46,4 +46,12 @@
         margin: 0;
         width: auto;
     }
+
+    .card-title {
+        padding-left: 1em;
+    }
+
+    .card-text {
+        padding-left: 1.5em;
+    }
 }
