--- a/src/components/BarkDetails/barkdetails.css
+++ b/src/components/BarkDetails/barkdetails.css
@@ -19,11 +19,12 @@
 }
 
 .btn-go-back {
-    width: 20em;
+    width: 10em;
     height: 4em;
     padding: 0.35em 1.2em;
     border: 0.05em solid #fc565c;
-    /* margin: 0 auto; */
+    border-radius: .6em;
+    margin: 0 auto;
     margin-top: 3em;
     margin-bottom: 10em;
     box-sizing: border-box;
@@ -33,7 +34,7 @@
     text-align: center;
     transition: all 0.2s;
     font-size: .8rem;
-    cursor: pointer;
+    cursor: pointer;  
     }
 
 .btn-go-back:hover{
