--- a/src/components/SearchLocation/searchlocation.css
+++ b/src/components/SearchLocation/searchlocation.css
@@ -16,7 +16,7 @@
     width: 20em;
     height: 4em;
     padding-left: 1em;
-    border: solid 1px  #fc565c;
+    border: solid .2em  #fc565c;
     color: #22355b;
 }
 
