--- a/src/components/BarkDetails/barkdetails.css
+++ b/src/components/BarkDetails/barkdetails.css
@@ -23,7 +23,6 @@
     height: 4em;
     padding: 0.35em 1.2em;
     border: 0.05em solid #fc565c;
-    border-radius: .6em;
     margin: 0 auto;
     margin-top: 3em;
     margin-bottom: 10em;
@@ -41,6 +40,10 @@
     color:#ffffff;
     background-color:#fc565c; 
     }
+
+.btn-container {
+    padding-left: 3em;
+}
 
 @media screen and (min-width: 480px) {
     .bark-details {
