--- a/src/components/Gender/gender.css
+++ b/src/components/Gender/gender.css
@@ -17,7 +17,7 @@
     height: 4.2em; 
     margin-left: 0em !important;
     color: #22355b;
-    outline: solid .2em #fc565c;
+    outline: solid .2em #fd8283;
 }
 
 ::placeholder {
