--- a/src/components/RandomBark/randombark.css
+++ b/src/components/RandomBark/randombark.css
@@ -27,7 +27,7 @@ select {
     width: 20em;
     height: 4em;
     border: none;
-    outline: solid .2em #fc565c;
+    outline: solid .2em #fd8283;
     background-color: #ffffff;
     margin-left: 1em;
 }
