--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,7 +1,14 @@
 .footer-container {
+    display: flex;
+    justify-content: center;
     height: 20em;
     margin-top: 5em;
     background-color: #052a4e;
     border-top: 4px solid #fd8283;
     padding: 7.5em 8em;
+    color: #ffffff;
+}
+
+.footer-container i {
+    color: #ffffff;
 }
