--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,17 +1,46 @@
-.home {
+/* .home {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .home img {
-  width: 100%;
+  max-width: 80vw;
 }
 
+.header-wrapper h1 {
+  font-size: 2rem;
+  color:  #052a4e;
+  border-bottom: .15em solid #fd8283;
+}
 
+.h1-span {
+  font-size: 2rem;
+  color:  #052a4e;
+  border-bottom: .15em solid #fd8283;
+  font-weight: 700;
+}
 
-@media screen and ( min-width: 480px) {
+.heightlight-text p {
+  font-size: 2em;
+  color:  #052a4e;
+  letter-spacing: 1px;
+  max-width: 86vw;
+  font-weight: 300;
+  line-height: 1.6;
+  margin-top: 3em;
+} */
+
+@media screen and (min-width: 480px) {
+
+  .home {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+  }
+
   .home img {
-    width: 100vw;
+    max-width: 100vw;;
     margin-top: 1em;
     margin-bottom: 10em;
   }
@@ -24,6 +53,14 @@
   }
   
   .header-wrapper h1 {
+    font-size: 4rem;
+    color:  #052a4e;
+    border-bottom: .15em solid #fd8283;
+    line-height: 1.2;
+  }
+
+  .h1-span {
+    font-weight: 700;
     font-size: 4rem;
     color:  #052a4e;
     border-bottom: .15em solid #fd8283;
@@ -47,11 +84,5 @@
     padding: .5em 1em .75rem 1em;
   }
 
-  .h1-span {
-    font-weight: 700;
-    font-size: 4rem;
-    color:  #052a4e;
-    border-bottom: .15em solid #fd8283;
-    line-height: 1.2;
-  }
+  
 }
