--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -5,7 +5,7 @@
     margin-top: 5em;
     background-color: #052a4e;
     border-top: 4px solid #fd8283;
-    padding: 7.5em 8em;
+    padding-top: 7.5em;
     color: #ffffff;
     width: 100%
 }
@@ -17,5 +17,6 @@
 @media screen and (min-width: 480px) {
     .footer-container {
         height: 20em;
+        width: 100%;
     }
 }
