--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,11 +1,21 @@
-/* .home {
+.home {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.home img {
-  max-width: 80vw;
+.fist-bump-lg {
+  display: none;
+}
+
+.fist-bump-sm {
+  /* width: 768px; */
+  height: 600px;
+  object-fit: contain;
+}
+
+.item {
+  order: 2;
 }
 
 .header-wrapper h1 {
@@ -14,64 +24,83 @@
   border-bottom: .15em solid #fd8283;
 }
 
+.header-wrapper {
+  order: 1;
+  z-index: 1;
+  position: absolute;
+  top: 20em;
+}
+
 .h1-span {
   font-size: 2rem;
   color:  #052a4e;
-  border-bottom: .15em solid #fd8283;
   font-weight: 700;
+  border-bottom: .15em solid #fd8283;
 }
 
-.heightlight-text p {
-  font-size: 2em;
+.heightlight-text {
+  font-size: 1.4rem;
   color:  #052a4e;
-  letter-spacing: 1px;
-  max-width: 86vw;
-  font-weight: 300;
+  order: 3;
+}
+
+.heightlight-text {
+  width: 75vw;
   line-height: 1.6;
-  margin-top: 3em;
-} */
+  text-align: center;
+}
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
 
-  .home {
+  .fist-bump-sm {
+    display: none;
+  }
+
+  .fist-bump-lg {
+    display: block;
+    max-width: 100vw;
+  }
+  
+
+  /* .home {
     display: flex;
     justify-content: center;
     flex-direction: row;
-  }
+  } */
 
-  .home img {
+  /* .home img {
     max-width: 100vw;;
     margin-top: 1em;
     margin-bottom: 10em;
-  }
+  } */
 
-  .header-wrapper {
+  /* .header-wrapper {
     position: absolute;
     max-width: 40vw;
     margin-left: 35em;
     margin-top: 10em;
-  }
+  } */
   
-  .header-wrapper h1 {
+  /* .header-wrapper h1 {
     font-size: 4rem;
     color:  #052a4e;
     border-bottom: .15em solid #fd8283;
     line-height: 1.2;
-  }
+  } */
 
-  .h1-span {
+  /* .h1-span {
     font-weight: 700;
     font-size: 4rem;
     color:  #052a4e;
     border-bottom: .15em solid #fd8283;
     line-height: 1.2;
-  }
+  } */
 
-  .heightlight-text {
+  /* .heightlight-text {
     position: absolute;
-  }
+  } */
 
-  .heightlight-text p {
+  /* .heightlight-text p {
     font-size: 2em;
     color:  #052a4e;
     letter-spacing: 1px;
@@ -82,7 +111,7 @@
     line-height: 1.6;
     background-color: #ffffff;
     padding: .5em 1em .75rem 1em;
-  }
+  } */
 
   
 }
