--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -50,7 +50,7 @@
   text-align: center;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1488px) {
 
   .fist-bump-sm {
     display: none;
@@ -61,6 +61,30 @@
     max-width: 100vw;
   }
   
+
+  .header-wrapper {
+    position: absolute;
+    top: 22em;
+    left: 89em;
+  }
+
+  .header-wrapper h1 {
+    font-size: 4rem;
+  }
+
+  .h1-span {
+    font-size: 4rem;
+  }
+
+  .heightlight-text {
+    position: absolute;
+    top: 24em;
+    left: 39.6em;
+    width: 30vw;
+    background-color: #ffffff;
+    padding: .5em 2.5em;
+
+  }
 
   /* .home {
     display: flex;
