--- a/src/components/BarkList/barklist.css
+++ b/src/components/BarkList/barklist.css
@@ -43,10 +43,11 @@
 }
 
 .sub-title {
+    font-family: 'karla', sans-serif;
     font-size: 1.2rem;
     color: #22355b;
-    font-weight: 300;
-    padding-right: 0.2em;
+    font-weight: 400;
+    padding-right: 1em;
 }
 
 @media screen and (min-width: 768px) {
