--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -65,7 +65,8 @@
 
 .nav-bar-narrow {
     padding: 4em 6em;
-    flex-grow: 1
+    flex-grow: 1;
+    z-index: 2;
 }
 .narrow-nav-menu ul {
     list-style: none;
