--- a/src/components/BarkList/barklist.css
+++ b/src/components/BarkList/barklist.css
@@ -27,6 +27,9 @@
     object-fit: cover;
     margin-bottom: 1em;
 }
+.card-body .card-title {
+    margin-left: .9em;
+}
 
 .card-title {
     font-size: 1.8rem;
