--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -24,7 +24,7 @@
 .tag-line h1 {
     color:  #052a4e;
     font-size: 1.8em;
-    letter-spacing: 1px;
+    letter-spacing: .1em;
     font-weight: 500;
     font-family: 'Montserrat', sans-serif;
 }
